# hyrise

./: .gitmodules  CMakeLists.txt  install.sh
scripts/: csv_to_json.py
src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt  storage_and_encoding_type_benchmark.cpp  tpcds_benchmark.cpp  tpch_benchmark.cpp
src/benchmarklib/: CMakeLists.txt  benchmark_runner.cpp  table_generator.cpp
src/benchmarklib/tpch/: tpch_table_generator.cpp
src/lib/: CMakeLists.txt  lossless_cast.hpp
src/lib/concurrency/: transaction_context.cpp
src/lib/logical_query_plan/: jit_aware_lqp_translator.cpp
src/lib/operators/: insert.cpp  jit_operator_wrapper.cpp  jit_operator_wrapper.hpp  projection.cpp  sort.cpp
src/lib/sql/: sql_translator.cpp
src/lib/storage/: base_segment.hpp  chunk.cpp  dictionary_segment.cpp  fixed_string_dictionary_segment.cpp  frame_of_reference_segment.cpp  lz4_segment.cpp  run_length_segment.cpp  segment_access_counter.cpp  segment_access_counter.hpp  segment_accessor.hpp  segment_encoding_utils.cpp  value_segment.cpp
src/plugins/: CMakeLists.txt  anti_caching_config.cpp  anti_caching_config.hpp  anti_caching_plugin.cpp  anti_caching_plugin.hpp  mmap_memory_resource.cpp  mmap_memory_resource.hpp  persistent_memory_manager.cpp  persistent_memory_manager.hpp  persistent_memory_resource.cpp  persistent_memory_resource.hpp  pmemobj_memory_resource.cpp  pmemobj_memory_resource.hpp
src/plugins/anti_caching/: anti_caching_config.cpp  anti_caching_config.hpp  anti_caching_plugin.cpp  anti_caching_plugin.hpp  knapsack_solver.cpp  knapsack_solver.hpp  persistent_memory_manager.cpp  persistent_memory_manager.hpp  segment_id.cpp  segment_id.hpp  segment_info.cpp  segment_info.hpp  segment_tools.cpp  segment_tools.hpp
src/plugins/anti_caching/memory_resource/: lockable_memory_resource.cpp  lockable_memory_resource.hpp  mmap_memory_resource.cpp  mmap_memory_resource.hpp  pmemobj_memory_resource.cpp  pmemobj_memory_resource.hpp
src/plugins/anti_caching/segment_manager/: abstract_segment_manager.cpp  abstract_segment_manager.hpp  lockable_segment_manager.cpp  lockable_segment_manager.hpp  mmap_segment_manager.cpp  mmap_segment_manager.hpp  pmr_segment_manager.cpp  pmr_segment_manager.hpp  umap_segment_manager.cpp  umap_segment_manager.hpp
src/test/: CMakeLists.txt
src/test/memory/: segments_using_allocators_test.cpp
src/test/plugins/: anti_caching_plugin_test.cpp
(+34 files in other folders)
